# clickgreet

./: README.rst  pyproject.toml
src/greet/: greet.py
