[tool.poetry]
name = "greet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
greet = "greet.greet:greet"

[tool.poetry.dependencies]
python = "^3.7"
arrow = "^1.2.3"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
